WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143950
Contentextensions tests are flaky
https://bugs.webkit.org/show_bug.cgi?id=143950
Summary
Contentextensions tests are flaky
Alexey Proskuryakov
Reported
2015-04-20 09:33:41 PDT
Most contentextensions tests are flaky, some of them failing a lot:
http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=contentextensions
Given that even basic-filter.html fails, this seems to be something very generic, so I'm going to mark the whole directory as flaky. Alex could reproduce some flakiness locally.
Attachments
Patch
(3.72 KB, patch)
2015-04-20 11:23 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(3.66 KB, patch)
2015-04-20 11:37 PDT
,
Alex Christensen
beidson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2015-04-20 11:23:52 PDT
Created
attachment 251170
[details]
Patch
Alex Christensen
Comment 2
2015-04-20 11:37:10 PDT
Created
attachment 251172
[details]
Patch
Alex Christensen
Comment 3
2015-04-20 11:50:03 PDT
http://trac.webkit.org/changeset/183020
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug