Fix content extension test flakiness. https://bugs.webkit.org/show_bug.cgi?id=143950

Reviewed by Brady Eidson.

Tools:

* WebKitTestRunner/mac/TestControllerMac.mm:
(WTR::TestController::platformResetPreferencesToConsistentValues):
Remove the TestContentExtensions if it exists.
(WTR::TestController::platformConfigureViewForTest):
Log errors in case there are any.

LayoutTests:

* platform/mac-wk2/TestExpectations:
Mark contentextensions tests as not flaky any more.



Canonical link: https://commits.webkit.org/161941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183020 268f45cc-cd09-0410-ab3c-d52691b4dbfc